// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu @testing-library/react should handle keyboard events 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="false"
      aria-haspopup="true"
      class="sc-gsnTZi kerYdX"
      id="test-menu-button"
      type="button"
      width="10rem"
    >
      Test Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu @testing-library/react should handle keyboard events 2`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="true"
      aria-haspopup="true"
      class="sc-gsnTZi kerYdX"
      id="test-menu-button"
      type="button"
      width="10rem"
    >
      Test Menu
    </button>
    <div
      aria-labelledby="test-menu-button"
      class="sc-dkzDqf ealgGp"
      id="test-menu"
      role="menu"
    >
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 1
      </button>
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 2
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu @testing-library/react should handle keyboard events 3`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="false"
      aria-haspopup="true"
      class="sc-gsnTZi kerYdX"
      id="test-menu-button"
      type="button"
      width="10rem"
    >
      Test Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu @testing-library/react should handle keyboard events 4`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="true"
      aria-haspopup="true"
      class="sc-gsnTZi kerYdX"
      id="test-menu-button"
      type="button"
      width="10rem"
    >
      Test Menu
    </button>
    <div
      aria-labelledby="test-menu-button"
      class="sc-dkzDqf ealgGp"
      id="test-menu"
      role="menu"
    >
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 1
      </button>
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 2
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu @testing-library/react should open on a button click and close on an outside click 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="false"
      aria-haspopup="true"
      class="sc-gsnTZi cDKgHD"
      id="test-menu-button"
      type="button"
    >
      Test Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu @testing-library/react should open on a button click and close on an outside click 2`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="true"
      aria-haspopup="true"
      class="sc-gsnTZi cDKgHD"
      id="test-menu-button"
      type="button"
    >
      Test Menu
    </button>
    <div
      aria-labelledby="test-menu-button"
      class="sc-dkzDqf ealgGp"
      id="test-menu"
      role="menu"
    >
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 1
      </button>
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 2
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu @testing-library/react should open on a button click and close on an outside click 3`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="true"
      aria-haspopup="true"
      class="sc-gsnTZi cDKgHD"
      id="test-menu-button"
      type="button"
    >
      Test Menu
    </button>
    <div
      aria-labelledby="test-menu-button"
      class="sc-dkzDqf ealgGp"
      id="test-menu"
      role="menu"
    >
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 1
      </button>
      <button
        class="sc-hKMtZM fPZkae"
        role="menuitem"
      >
        Test Menu Item 2
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu @testing-library/react should open on a button click and close on an outside click 4`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ ehiAyy"
  >
    <button
      aria-controls="test-menu"
      aria-expanded="false"
      aria-haspopup="true"
      class="sc-gsnTZi cDKgHD"
      id="test-menu-button"
      type="button"
    >
      Test Menu
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu react-test-renderer should not open when disabled 1`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    disabled={true}
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
</div>
`;

exports[`DropdownMenu react-test-renderer should not open when disabled 2`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    disabled={true}
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
</div>
`;

exports[`DropdownMenu react-test-renderer should open on a button click and close on an item click 1`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
</div>
`;

exports[`DropdownMenu react-test-renderer should open on a button click and close on an item click 2`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={true}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
  <div
    aria-labelledby="test-menu-button"
    className="sc-dkzDqf ealgGp"
    id="test-menu"
    role="menu"
  >
    <button
      className="sc-hKMtZM fPZkae"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
    >
      Test Menu Item 1
    </button>
    <button
      className="sc-hKMtZM fPZkae"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
    >
      Test Menu Item 2
    </button>
  </div>
</div>
`;

exports[`DropdownMenu react-test-renderer should open on a button click and close on an item click 3`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
</div>
`;

exports[`DropdownMenu react-test-renderer should open on a button click and close on another button click 1`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
</div>
`;

exports[`DropdownMenu react-test-renderer should open on a button click and close on another button click 2`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={true}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
  <div
    aria-labelledby="test-menu-button"
    className="sc-dkzDqf ealgGp"
    id="test-menu"
    role="menu"
  >
    <button
      className="sc-hKMtZM fPZkae"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
    >
      Test Menu Item 1
    </button>
    <button
      className="sc-hKMtZM fPZkae"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
    >
      Test Menu Item 2
    </button>
  </div>
</div>
`;

exports[`DropdownMenu react-test-renderer should open on a button click and close on another button click 3`] = `
<div
  className="sc-bczRLJ ehiAyy"
>
  <button
    aria-controls="test-menu"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-gsnTZi dHrSBS"
    id="test-menu-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Test Menu
  </button>
</div>
`;
